Tests/Negative/MissingReturnValue.mr
fun test(): i32 {
    // Error: Function must return a value of type i32
}
